added repo name

--- a/extension.toml
+++ b/extension.toml
@@ -4,4 +4,4 @@ version = "0.1"
 schema_version = 1
 authors = ["Zev Ross <zevross@gmail.com>"]
 description = "A theme for the Zed text editor based on the art desing of the 2026 video game Marathon by Bungie."
-repository = "https://github.com/Zev18/"
+repository = "https://github.com/Zev18/marathon-theme-zed"
